Figured out how to replicate python Counter

--- a/Data Science From Scratch with C#/Data Science From Scratch C# - Chapter 2.ipynb
+++ b/Data Science From Scratch with C#/Data Science From Scratch C# - Chapter 2.ipynb
@@ -626,7 +626,28 @@
    "metadata": {},
    "source": [
     "## Counter\n",
-    "In Python, a Counter acts like the C# .Count() function. It also has a most_common method that we can replicate using LINQ (can make this an extension method). \n",
+    "In Python, a Counter acts like the C# .Count() function. Actually, it is similar to a dict/Dictionary, where it holds the count of values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Dictionary<int, int> myCounter = new Dictionary<int,int>();\n",
+    "List<int> intList = new List<int>  { 1, 1, 1, 2, 2, 2, 2, 3, 3, 3, 3, 4, 4, 5, 5, 6,6,6,6,6,6, 6, 7 };\n",
+    "\n",
+    "// can use IGrouping as an intermediate data structure, or just convert to Dictionary in one go\n",
+    "var intGroups = intList.GroupBy(i => i);\n",
+    "intGroups\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Counter also has a most_common method that we can replicate using LINQ (can make this an extension method). \n",
     "\n",
     "From https://stackoverflow.com/questions/6730974/select-most-frequent-value-using-linq :"
    ]
