--- a/Data Science From Scratch with C#/Data Science From Scratch C# - Chapter 3.ipynb
+++ b/Data Science From Scratch with C#/Data Science From Scratch C# - Chapter 3.ipynb
@@ -116,22 +116,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div id=\"bb5f376d-65cb-4847-8b22-f5f7c75949ce\" style=\"width: 700px; height: 500px;\"></div>\r\n",
+       "<div id=\"73a5899a-e712-4227-94ab-a699ef1110d7\" style=\"width: 700px; height: 500px;\"></div>\r\n",
        "<script type=\"text/javascript\">\r\n",
        "\r\n",
        "var renderPlotly = function() {\r\n",
        "    var xplotRequire = requirejs.config({context:'xplot-3.0.1',paths:{plotly:'https://cdn.plot.ly/plotly-1.49.2.min'}});\r\n",
        "    xplotRequire(['plotly'], function(Plotly) {\r\n",
        "\n",
-       "            var data = [{\"type\":\"bar\",\"x\":[\"Annie Hall\",\"Ben-Hur\",\"Casablanca\",\"Gandhi\",\"West Side Story\"],\"y\":[5,11,3,8,10]}];\n",
+       "            var data = [{\"type\":\"bar\",\"x\":[\"Annie Hall\",\"Ben-Hur\",\"Casablanca\",\"Gandhi\",\"West Side Story\"],\"y\":[5,11,3,8,10],\"marker\":{\"color\":[\"0ed145\",\"c4ff0e\",\"fff200\",\"fdeca6\",\"ffca18\"]}}];\n",
        "            var layout = {\"title\":\"My Favorite Movies\"};\n",
-       "            Plotly.newPlot('bb5f376d-65cb-4847-8b22-f5f7c75949ce', data, layout);\n",
+       "            Plotly.newPlot('73a5899a-e712-4227-94ab-a699ef1110d7', data, layout);\n",
        "        \r\n",
        "});\r\n",
        "};\r\n",
@@ -156,15 +156,84 @@
    "source": [
     "var movies = new List<string>() {\"Annie Hall\", \"Ben-Hur\", \"Casablanca\", \"Gandhi\", \"West Side Story\"};\n",
     "var numOscars = new List<int>() {5, 11, 3, 8, 10};\n",
+    "\n",
+    "// let's jazz it up with custom colors\n",
+    "var colors = new List<string>() {\"0ed145\", \"c4ff0e\", \"fff200\", \"fdeca6\", \"ffca18\"};\n",
     "var barSeries = new Graph.Bar() {\n",
     "    x = movies,\n",
-    "    y = numOscars\n",
+    "    y = numOscars,\n",
+    "    marker = new Graph.Marker() {color = colors}\n",
     "};\n",
     "var movieChart = Chart.Plot(new[] {barSeries});\n",
     "movieChart.WithTitle(\"My Favorite Movies\");\n",
     "movieChart.WithWidth(700);\n",
     "movieChart.WithHeight(500);\n",
     "display(movieChart);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Unhandled exception",
+     "evalue": "(11,75): error CS1002: ; expected",
+     "output_type": "error",
+     "traceback": [
+      "(11,75): error CS1002: ; expected"
+     ]
+    }
+   ],
+   "source": [
+    "// Fancier version with classes\n",
+    "public class Film {\n",
+    "    public string Title {get; set;}\n",
+    "    public int Year {get; set;}\n",
+    "}\n",
+    "\n",
+    "Film annie = new Film() {Title = \"Annie Hall\", Year = 1977};\n",
+    "Film benHur = new Film() {Title = \"Ben-Hur\", Year = 1959};\n",
+    "Film casablanca = new Film() {Title = \"Casablanca\", Year = 1942};\n",
+    "film gandhi = new Film() {Title = \"Gandhi\", Year = 1982};\n",
+    "film westsideStory = new Film() {Title = \"West Side Story\", Year = \"1961\"};\n",
+    "\n",
+    "// eh, forget it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>Key</th><th>Value</th></tr></thead><tbody><tr><td>0</td><td>0</td><td>2</td></tr><tr><td>1</td><td>60</td><td>1</td></tr><tr><td>2</td><td>70</td><td>3</td></tr><tr><td>3</td><td>80</td><td>4</td></tr><tr><td>4</td><td>90</td><td>3</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// Using bar chart to show bucketed grades by decile\n",
+    "List<int> grades = new List<int>() {83, 95, 91, 87, 70, 0, 85, 82, 100, 67, 73, 77, 0};\n",
+    "\n",
+    "// We want to replicate this:\n",
+    "// # Bucket grades by decile, but put 100 in with the 90s\n",
+    "// histogram = Counter(min(grade // 10 * 10, 90) for grade in grades)\n",
+    "// the // is floor division\n",
+    "\n",
+    "// can use IGrouping as an intermediate step\n",
+    "var gradeGroups = grades.GroupBy(g => Math.Min(((g / 10) * 10),90));\n",
+    "Dictionary<int, int> gradeCounter = gradeGroups.ToDictionary(g => g.Key, g => g.ToList().Count);\n",
+    "\n",
+    "// or make a Dictionary in one go:\n",
+    "var gradeCounter2 = grades.GroupBy(g => Math.Min(((g / 10) * 10), 90))\n",
+    "    .ToDictionary(g => g.Key, g => g.ToList().Count).OrderBy(k => k.Key);\n",
+    "gradeCounter2"
    ]
   },
   {
