--- a/Data Science From Scratch with C#/Data Science From Scratch C# - Chapter 2.ipynb
+++ b/Data Science From Scratch with C#/Data Science From Scratch C# - Chapter 2.ipynb
@@ -1071,7 +1071,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## zip and Argument Unpacking"
+    "## zip and Argument Unpacking\n",
+    "LINQ has a Zip function, but apparently it only works on 2 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "List<string> list1 = new List<string>() { \"a\", \"b\", \"c\" };\n",
+    "List<int> list2 = new List<int>() { 1, 2, 3 };\n",
+    "List<(string letter, int number)> zipped = list1.Zip(list2, (first, second) => (first, second)).ToList() ;\n"
    ]
   },
   {
