added more XPlot.Plotly stuff

--- a/Data Science From Scratch with C#/Data Science From Scratch C# - Chapter 3.ipynb
+++ b/Data Science From Scratch with C#/Data Science From Scratch C# - Chapter 3.ipynb
@@ -202,38 +202,122 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using IGrouping/Dictionary to replace Counter"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th><i>index</i></th><th>Key</th><th>Value</th></tr></thead><tbody><tr><td>0</td><td>0</td><td>2</td></tr><tr><td>1</td><td>60</td><td>1</td></tr><tr><td>2</td><td>70</td><td>3</td></tr><tr><td>3</td><td>80</td><td>4</td></tr><tr><td>4</td><td>90</td><td>3</td></tr></tbody></table>"
+       "<table><thead><tr><th><i>key</i></th><th>value</th></tr></thead><tbody><tr><td>80</td><td>4</td></tr><tr><td>90</td><td>3</td></tr><tr><td>70</td><td>3</td></tr><tr><td>0</td><td>2</td></tr><tr><td>60</td><td>1</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "// Using bar chart to show bucketed grades by decile\n",
-    "List<int> grades = new List<int>() {83, 95, 91, 87, 70, 0, 85, 82, 100, 67, 73, 77, 0};\n",
-    "\n",
-    "// We want to replicate this:\n",
+    "We want to replicate this:\n",
     "// # Bucket grades by decile, but put 100 in with the 90s\n",
     "// histogram = Counter(min(grade // 10 * 10, 90) for grade in grades)\n",
     "// the // is floor division\n",
+    "\n",
+    "// Using bar chart to show bucketed grades by decile\n",
+    "List<int> grades = new List<int>() {83, 95, 91, 87, 70, 0, 85, 82, 100, 67, 73, 77, 0};\n",
+    "\n",
     "\n",
     "// can use IGrouping as an intermediate step\n",
     "var gradeGroups = grades.GroupBy(g => Math.Min(((g / 10) * 10),90));\n",
     "Dictionary<int, int> gradeCounter = gradeGroups.ToDictionary(g => g.Key, g => g.ToList().Count);\n",
     "\n",
     "// or make a Dictionary in one go:\n",
-    "var gradeCounter2 = grades.GroupBy(g => Math.Min(((g / 10) * 10), 90))\n",
-    "    .ToDictionary(g => g.Key, g => g.ToList().Count).OrderBy(k => k.Key);\n",
+    "Dictionary<int,int> gradeCounter2 = grades.GroupBy(g => Math.Min(((g / 10) * 10), 90))\n",
+    "    .ToDictionary(g => g.Key, g => g.ToList().Count);\n",
     "gradeCounter2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div id=\"9d2ace39-e14b-4ab5-9614-95b90c932e31\" style=\"width: 700px; height: 500px;\"></div>\r\n",
+       "<script type=\"text/javascript\">\r\n",
+       "\r\n",
+       "var renderPlotly = function() {\r\n",
+       "    var xplotRequire = requirejs.config({context:'xplot-3.0.1',paths:{plotly:'https://cdn.plot.ly/plotly-1.49.2.min'}});\r\n",
+       "    xplotRequire(['plotly'], function(Plotly) {\r\n",
+       "\n",
+       "            var data = [{\"type\":\"bar\",\"x\":[80,90,70,0,60],\"y\":[4,3,3,2,1]}];\n",
+       "            var layout = {\"title\":\"Distribution of Exam 1 Grades\",\"xaxis\":{\"title\":\"Decile\",\"_isSubplotObj\":true},\"yaxis\":{\"title\":\"# of Students\",\"_isSubplotObj\":true}};\n",
+       "            Plotly.newPlot('9d2ace39-e14b-4ab5-9614-95b90c932e31', data, layout);\n",
+       "        \r\n",
+       "});\r\n",
+       "};\r\n",
+       "if ((typeof(requirejs) !==  typeof(Function)) || (typeof(requirejs.config) !== typeof(Function))) { \r\n",
+       "    var script = document.createElement(\"script\"); \r\n",
+       "    script.setAttribute(\"src\", \"https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js\"); \r\n",
+       "    script.onload = function(){\r\n",
+       "        renderPlotly();\r\n",
+       "    };\r\n",
+       "    document.getElementsByTagName(\"head\")[0].appendChild(script); \r\n",
+       "}\r\n",
+       "else {\r\n",
+       "    renderPlotly();\r\n",
+       "}\r\n",
+       "</script>\r\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "/*\n",
+    "Still trying to replicate this exactly with XPlot.Plotly:\n",
+    "\n",
+    "plt.bar([x + 5 for x in histogram.keys()],  # Shift bars right by 5\n",
+    "        histogram.values(),                 # Give each bar its correct height\n",
+    "        10,                                 # Give each bar a width of 10\n",
+    "        edgecolor=(0, 0, 0))                # Black edges for each bar\n",
+    "\n",
+    "plt.axis([-5, 105, 0, 5])                  # x-axis from -5 to 105,\n",
+    "                                           # y-axis from 0 to 5\n",
+    "\n",
+    "plt.xticks([10 * i for i in range(11)])    # x-axis labels at 0, 10, ..., 100\n",
+    "plt.xlabel(\"Decile\")\n",
+    "plt.ylabel(\"# of Students\")\n",
+    "plt.title(\"Distribution of Exam 1 Grades\")\n",
+    "plt.show()\n",
+    "*/\n",
+    "\n",
+    "var layout = new Layout.Layout();\n",
+    "layout.title = \"Distribution of Exam 1 Grades\";\n",
+    "//layout.width = 10;\n",
+    "\n",
+    "var gradeSeries = new Graph.Bar() {\n",
+    "    x = gradeCounter2.Keys,\n",
+    "    y = gradeCounter2.Values,\n",
+    "};\n",
+    "var gradeChart = Chart.Plot(new[] {gradeSeries});\n",
+    "// gradeChart.WithTitle(\"Distribution of Exam 1 Grades\");\n",
+    "gradeChart.WithLayout(layout);\n",
+    "gradeChart.WithWidth(700);\n",
+    "gradeChart.WithHeight(500);\n",
+    "gradeChart.WithXTitle(\"Decile\");\n",
+    "gradeChart.WithYTitle(\"# of Students\");\n",
+    "display(gradeChart)\n"
    ]
   },
   {
